--- a/index.html
+++ b/index.html
@@ -3,66 +3,145 @@
     <head>
         <meta charset="UTF-8">
         <title>Shukansinh's Personal Website</title>
+        <link rel="stylesheet" href="Style.css">
     </head>
 
     <body>
-        <table cellspacing="20">
+        <!--Header Part-->
+        <div class="header">
+            <img class="face" src="Profile Picture.png">
+            <div class="title">
+                <h1 class="name"><span class="coral">Shukansinh Vaghela</span></h1>
+                <div class="qualification">Web Developer & Designer</div>
+            </div>
+            <table>
+                <tr>
+                    <td class="coral">Email id:</td>
+                    <td>Shukanhvaghela@outlook.com</td>
+                </tr>
+                <tr>
+                    <td class="coral">Contact:</td>
+                    <td>8160456770</td>
+                </tr>
+                <tr>
+                    <td class="coral">Website:</td>
+                    <td>https://hackaquario.github.io/Portfolio/</td>
+                </tr>
+                <tr>
+                    <td><a href="Contact me.html">Contact Me</a></td>
+                </tr>
+            </table>
+        </div>
+        <!--Body Part-->
+        <hr class="hrline">
+        <table>
             <tr>
-                <td><img src="Profile Picture.png" alt="Shukansinh's Profile Picture"></td>
+                <td class="table-heading">INTRODUCTION</td>
+                <td>I am a frontend developer. I am very good at creating or designing the webpages.</td>
+            </tr>
+        </table>
+
+        <table>
+            <tr>
+                <td class="table-heading">WORK EXPERIENCE</td>
                 <td>
-                    <h1>Shukansinh Vaghela</h1>
-                    <p><em><Strong>Software Developer</Strong></em></p>
-                    <p>I am a frontend developer. I am very good at creating or designing webpages.</p>
-                    <a href="Contact me.html">Contact Me</a>
+                    <div>Intern - Silwerwing Technologies Pvt. Ltd.</div>
+                    <div>September 2018-June 2019</div>
+                    <div>Internship for the advanced learning towards professional portfolio creation and learn to develop frontend templates for creating templates by using HTML, CSS & JavaScript.	Participated as Technical Support for 15 days in Project taken from company as Epitome Pvt. Ltd., Ahmedabad during Loksabha election May 2019.In which our responsibility was to support technical and Non-technical issues held during surveillance.</div>
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td>
+                    <div>Python Intern - Silwerwing Technologies Pvt. Ltd.</div>
+                    <div>July 2019-September 2020</div>
+                    <div>Accomplished my academic project as Media Monitoring System during the period under mentorship of python developer.</div>
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td>
+                    <div>Technical Support - CellOne Networks</div>
+                    <div>August 2020-November 2021</div>
+                    <div>Provide technical support regarding software and hardware issues, troubleshooting and error resolution</div>
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td>
+                    <div>Project Executive - Gujarat Informatics Limited</div>
+                    <div>December 2021-Current</div>
+                    <div>Working for GIL under GSWAN project. Procurement and Inspection for Network and service components via GeM. Eshtablishing GSWAN service for CM/PM Events across Gujarat. </div>
                 </td>
             </tr>
         </table>
-        <hr>
-        
-        <h3>Skills & Abilities</h3>
-        <p>Programming Languages:</p>
-        <li>C,C++,Core Java</li>
-        <p>Frontend:<p>
-        <li>HTML,CSS,Bootstrap,Javascript</li>
-        <p>Additional:</p>
-        <li>DSA</li>
-        <li>API Deployment</li>
-        <li> MS Office Suite</li>
-        <li>Presentation & Email</li>
-        <li>Knowledge of tender and procurement across GeM</li>
-        <hr>
 
-        <h3>Experience</h3>
-        <h4>Silverwing Technologies Pvt. Ltd. - Intern</h4>
-        <p>8th September 2018 to 8th September 2020</p>
-        <li>Worked as an intern with the company during my academic year.Working under mentorship by professional software developers.</li>
-        <h4>CellOne Networks</h4>
-        <p>1st August 2020 to 22nd November 2020</p>
-        <li>I accepted for the position in company as off role employee.</li>
-        <li>The role for the Job was to provide technical support regarding software and hardware issues, troubleshooting and error resolution.</li>
-        <h4>Gujarat Informatics Limited - Project Executive</h4>
-        <p>23rd November 2020-present</p>
-        <li>I have been working as project executive in GSWAN project at Gujarat Informatics limited.</li>
-        <hr>
+        <table>
+            <tr>
+                <td class="table-heading">EDUCATION</td>
+                <td>
+                    <div>Bachelor's of engineering-(Completed year-2020)-GTU</div>
+                    <div>Stream: Computer Engineering</div>
+                    <div>CGPA: 6.93 (First Class) (equivelent to 64.3%)</div>
+                </td>
+            </tr>
 
-        <h3>Education</h3>
-        <h4>Bachelor's of engineering-(Completed year-2020)-GTU</h4>
-        <p>Stream: Computer Engineering</p>
-        <p>CGPA: 6.93 (First Class) (equivelent to 64.3%)</p>
-        <h4>12th-(Completed year-2016)-GTU</h4>
-        <p>Stream: Science-(Completed year-2016)-GSHSEB</p>
-        <p>Percentile Rank(overall): 57.43</p>
-        <h4>12th-(Completed year-2014)-GTU</h4>
-        <p>Stream: Science-(Completed year-2016)-GSEB</p>
-        <p>Percentile Rank(overall): 94.50</p>
-        <hr>
+            <tr>
+                <td></td>
+                <td>
+                    <div>12th-(Completed year-2016)-GTU</div>
+                    <div>Stream: Science-(Completed year-2016)</div>
+                    <div>Percentile Rank(overall): 57.43</div>
+                </td>
+            </tr>
 
-        <h3>Project</h3>
-        <h4>Media Monitoring System (Final Year)</h4>
-        <p>A simple python based web dashboard that takes data as excel format (database) and creates productivity charts.</p>
-        <h4>Medical case generator (3rd Year)</h4>
-        <p>Takes data as input and receives required report as output.</p>
-        <hr>
+            <tr>
+                <td></td>
+                <td>
+                    <div>10th-(Completed year-2016)-GSEB</div>
+                    <div>Percentile Rank(overall): 94.50</div>
+                </td>
+            </tr>
+        </table>
 
+        <table>
+            <tr>
+                <td class="table-heading">SKILLS</td>
+                <td>
+                    <div>Web designing (frontend)</div> 
+                    <div>⭐⭐⭐⭐</div>
+                    <div>Web development</div>
+                    <div>⭐⭐⭐</div>
+                    <div>DSA</div>
+                    <div>⭐⭐⭐⭐</div>
+                    <div>Debugging</div>
+                    <div>⭐⭐⭐⭐</div>
+                    <div>Database</div>
+                    <div>⭐⭐⭐</div>
+                    <div>Soft Skills(Emails,Presentations,etc.)</div>
+                    <div>⭐⭐⭐⭐</div>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td class="table-heading">PROJECTS</td>
+                <td>
+                    <div>Media Monitoring System (Final Year)</div>
+                    <div>A simple python based web dashboard that takes data as excel format (database) and creates productivity charts.</div>
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td>
+                    <div>Medical case generator (3rd Year)</div>
+                    <div>Project to take data as input and receives required report as output.</div>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
